--- a/manifest.json
+++ b/manifest.json
@@ -10,9 +10,15 @@
   "permissions": [
     "tabs",
     "scripting",
-    "storage"
-
-
+    "storage",
+    "favicon"
+  ],
+  "web_accessible_resources": [
+    {
+      "resources": ["_favicon/*"],
+      "matches": ["<all_urls>"],
+      "extension_ids": ["*"]
+    }
   ],
   "background": {
     "service_worker": "background.js"
