Allow only one character as icon. in case it's an emoji, the length of the string is 2. rename extension and description.

--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
-  "name": "Tab Title Changer",
+  "name": "Tabify",
   "version": "1.0",
-  "description": "Change the title of the current tab",
+  "description": "Customize Your Browser Experience. Change the icon and title of any tab.",
   "host_permissions": [
     "https://*/*",
     "http://*/*"
