--- a/manifest.json
+++ b/manifest.json
@@ -26,9 +26,9 @@
   "action": {
     "default_popup": "popup.html",
     "default_icon": {
-      "16": "icon.png",
-      "48": "icon.png",
-      "128": "icon.png"
+      "16": "icon10.png",
+      "48": "icon10.png",
+      "128": "icon10.png"
     }
   },
   "icons": {
