--- a/manifest.json
+++ b/manifest.json
@@ -32,8 +32,8 @@
     }
   },
   "icons": {
-    "16": "icon.png",
-    "48": "icon.png",
-    "128": "icon.png"
+    "16": "icon10.png",
+    "48": "icon10.png",
+    "128": "icon10.png"
   }
 }
