--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
     "version": "1.0.0",
     "manifest_version": 3,
-    "name": "Tabify",
-    "description": "Customize Your Browser Experience. Change the icon and title of any tab.",
+    "name": "Tab Customizer",
+    "description": "Change the icon and title of any tab!",
     "action": {
-        "default_popup": "./dist/js/index.html",
+        "default_popup": "./dist/src/index.html",
         "default_title": "Tabify"
     },
     "host_permissions": [
