added amplitude to track a events

--- a/manifest.json
+++ b/manifest.json
@@ -15,7 +15,8 @@
         "tabs",
         "scripting",
         "storage",
-        "favicon"
+        "favicon",
+        "geolocation"
     ],
     "web_accessible_resources": [
         {
