--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
       "esnext"
     ],
     "types": [
-      "chrome"
+      "chrome",
+      "node"
     ],
     "allowJs": true,
     "skipLibCheck": true,
